Use ball-clip-rotate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
 <div>
   <!-- <ngx-spinner></ngx-spinner> -->
-  <ngx-spinner
+  <!-- <ngx-spinner
     [fullScreen]="true"
     type="ball-spin-clockwise"
+    size="medium"
+  ></ngx-spinner> -->
+  <ngx-spinner
+    [fullScreen]="true"
+    type="ball-clip-rotate"
     size="medium"
   ></ngx-spinner>
   <p>Content is here.</p>
